Добавлено:\ стратегии вычислений статистики для разных типов данных