@@ -1,6 +1,5 @@
 package base;
 
-import service.iofile.IOFiles;
 import service.statistics.Statistics;
 
 import java.io.BufferedReader;
@@ -9,21 +8,30 @@ import java.io.IOException;
 import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Elements {
     private final List<Element> elements;
-    private Statistics statistics;
+    private final Statistics statistics;
     public Elements() {
         elements = new ArrayList<>();
-        statistics = new Statistics();
+        statistics = new Statistics(this);
     }
 
     private void addElement(Element element) {
         elements.add(element);
     }
 
-    public List<String> getElementsByType(String typeElement) {
-        return elements.stream().filter(f -> f.getType().equals(typeElement)).map(Element::getElement).toList();
+    public List<String> filterElementsByType(String type) {
+        return elements.stream().filter(f -> f.getType().equals(type)).map(Element::getElement).toList();
+    }
+
+    public List<Object> filterElementsByTypeObject(String type) {
+        return elements.stream().filter(f -> f.getType().equals(type)).collect(Collectors.toList());
+    }
+
+    public List<Element> getElementsFilteredByObject(Object object) {
+        return elements.stream().filter(e -> e.equals(object)).collect(Collectors.toList());
     }
 
     public List<String> uniqueTypeElements() {
@@ -52,7 +60,7 @@ public class Elements {
         uniqueTypeElements().forEach(name -> {
             try {
                 Path path = Paths.get(p.concat(name.concat(".txt")));
-                Files.write(path, getElementsByType(name), options);
+                Files.write(path, filterElementsByType(name), options);
             }catch (NoSuchFileException e){
                 System.out.println("Файл не существует: " + e.getMessage());
             }catch (IOException e) {
@@ -64,6 +72,19 @@ public class Elements {
     public List<Element> getElements() {
         return elements;
     }
+
+    public List<Object> getElementsObject(String type) {
+        return elements.stream().filter(element -> element.getType().equals(type)).map(Element::getElement).collect(Collectors.toList());
+    }
+
+//    public List<Number> getNumberElements() {
+//        return elements.stream()
+//                .filter(element -> element.getType().equals("integer") || element.getType().equals("float"))
+//                .map(element -> element.getElement())  // Получаем Object
+//                .filter(obj -> obj instanceof Number)  // Фильтруем только Number (Integer или Float), игнорируем String
+//                .map(obj -> (Number) obj)  // Безопасное приведение
+//                .collect(Collectors.toList());
+//    }
 
     public Statistics getStatistics() {
         return statistics;
